--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
+  
     <script type="module" src="./main.js"></script>
+
+    <form class="form">
+      <div class="text-button">
+      <label>
+        <input type="text" name="query" class="inp" placeholder="Search images..." required>
+      </label>
+      <button type="submit">Search</button>
+    </div>
+    </form>
+
+<div id="loader-overlay" class="hidden">
+<span class="loader"></span>
+</div>
+
+    <ul class="gallery"></ul>
+
   </body>
 </html>
