--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
   
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./goit-js-hw-11/main.js"></script>
 
     <form class="form">
       <div class="text-button">
